[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Images/Animations/gates/Fence-gate-x2.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Tiles/GateFront.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/FenceAutoTile.tres" type="TileSet" id=3]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 64, 96 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "close",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30, 15 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20.5, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 30, 15.5 )

[node name="GateFront" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, -32 )
frames = SubResource( 5 )
animation = "close"
frame = 3
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 14, -96 )
frames = SubResource( 5 )
animation = "close"
frame = 3
playing = true

[node name="MovementCollision" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollision"]
position = Vector2( 32, -12 )
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2( 16, -16 )
collision_layer = 24
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
light_mask = 0
position = Vector2( 15.5, 0 )
shape = SubResource( 7 )

[node name="DetectObjectOverPathBox" type="Area2D" parent="."]
visible = false
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectObjectOverPathBox"]
position = Vector2( 32.5, -7 )
shape = SubResource( 8 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -9 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 32, -1.5 )
shape = SubResource( 9 )

[node name="FenceTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -262145, 0, 11, -327678, 0, 11, -131073, 0, 11, -196606, 0, 11, -1, 0, 11, -65535, 0, 11 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
